tests/invalid/integer_literal_overflow.ar
fn main() {
    const a: u8 = 256;
    const b: u16 = 65536;
    const c: u32 = 4294967296;
    const d: u64 = 18446744073709551616;
    const f: i8 = 128;
    const g: i16 = 32768;
    const h: i32 = 2147483648;
    const i: i64 = 9223372036854775808;
    const k = 2147483648;
}

//! 2:19: error: literal value outside `u8` range
//! 3:20: error: literal value outside `u16` range
//! 4:20: error: literal value outside `u32` range
//! 5:20: error: literal value outside `u64` range
//! 6:19: error: literal value outside `i8` range
//! 7:20: error: literal value outside `i16` range
//! 8:20: error: literal value outside `i32` range
//! 9:20: error: literal value outside `i64` range
//! 10:15: error: literal value outside `i32` range
